<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewSearchResultActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/recipe"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:text="@string/recipe_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="5dp"
        android:text="@string/ingredients"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/goback_searchresults"
        style="@style/OrangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/go_back_to_search_results"
        android:onClick="OnGobacktoSearchResults"
        android:textSize="18sp" />

    <Button
        android:id="@+id/download_recipe"
        style="@style/GreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/goback_searchresults"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:text="@string/download_recipe"
        android:onClick="OnDownloadRecipe"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add_photos"
        style="@style/BlueButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/download_recipe"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:onClick="OnAddPhotos"
        android:text="@string/add_photos"
        android:textSize="18sp" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3" >
    </ListView>

    <Button
        android:id="@+id/view_photos"
        style="@style/BlueButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_photos"
        android:layout_alignBottom="@+id/add_photos"
        android:onClick="OnViewPhotos"
        android:text="@string/view_photos"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:text="@string/instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/add_photos"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5" >
    </EditText>
i

</RelativeLayout>