<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".EditIngredients" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/edit_ingredients"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/mylist"
        android:layout_width="match_parent"
        android:layout_height="355dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" >
    </ListView>

    <Button
        android:id="@+id/Button01"
        style="@style/GreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/mylist"
        android:onClick="OnSaveIngredients"
        android:layout_marginRight="5sp" 
        android:text="@string/save_changes"
        android:layout_marginBottom="15sp" 
         android:textSize="15sp"/>

    <Button
        android:id="@+id/add_ingredient"
        style="@style/GreenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/Button01"
        android:onClick="OnAddIngredient"
        android:text="@string/add_ingredient"
        android:textSize="15sp" />

    <Button
        android:id="@+id/remove_ingredient"
        style="@style/BlueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Button01"
        android:layout_marginLeft="5sp" 
        android:onClick="OnRemoveIngredient"
        android:text="@string/remove"
        android:textSize="15sp" />

    <Button
        android:id="@+id/menu_button"
        style="@style/OrangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/remove_ingredient"
        android:layout_alignBottom="@+id/remove_ingredient"
        android:layout_alignLeft="@+id/textView1"
        android:onClick="OnGotoMainMenu"
        android:text="@string/main_menu"
        android:textSize="15sp" />

</RelativeLayout>
    
    <ImageView
        android:id="@+id/darkenScreen"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:contentDescription = "@+id/popup_fadeout"
        android:src="@drawable/trans_black" />
</FrameLayout>